--- a/Mod8/Serialization/Serialization/Serialization.csproj
+++ b/Mod8/Serialization/Serialization/Serialization.csproj
@@ -8,3 +8,7 @@
   </PropertyGroup>
 
 </Project>
+
+<ItemGroup>
+  <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="8.0.0" />
+</ItemGroup>
